--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         }
     ],
     "require": {
-            "guzzlehttp/guzzle": "^6.3"
+            "php": ">=5.5.9",
+            "illuminate/support": "5.*",
+            "guzzlehttp/guzzle": "~6.0",
+            "monolog/monolog": "^1.19"
     },
     "autoload": {
         "psr-4": {
