--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "magentopack/vietech",
     "description": "",
+    "license": "mag",
     "authors": [
         {
             "name": "Pratik Rasam",
