--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,7 @@
         }
     ],
     "require": {
-            "php": ">=5.5.9",
-            "illuminate/support": "5.*",
-            "guzzlehttp/guzzle": "~6.0",
-            "monolog/monolog": "^1.19"
+            "guzzlehttp/guzzle": "~6.0"
     },
     "autoload": {
         "psr-4": {
