--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,10 @@
             "Magento\\": "src/"
         }
     },
+    "config": {
+        "sort-packages": true,
+        "preferred-install": "dist"
+    },
     "minimum-stability": "dev",  
     "prefer-stable": true,
     "extra": {
@@ -24,7 +28,7 @@
                 "Magento\\MagentoServiceProvider"
             ],
             "aliases": {
-                "Magento": "Magento\\Facades\\MagentoFetch"
+                "Magento": "Magento\\Facades\\MagentoFacade"
             }
         }
     }
